Login signin operations have been completed.

--- a/Traversal/Traversal/Views/UIPartials/FooterPartial.cshtml
+++ b/Traversal/Traversal/Views/UIPartials/FooterPartial.cshtml
@@ -21,6 +21,7 @@
                                     <li><a href="#url">Deniz Seferleri</a></li>
                                     <li><a href="#url">Döviz Ofisleri</a></li>
                                     <li><a href="#url">Bize Yazın</a></li>
+                                    <li><a href="/Member/Destination/Index/">Kullanıcı Girişi</a></li>
                                 </ul>
                             </div>
                             <div class="col-md-4 column mt-md-0 mt-4">
