--- a/Traversal/Traversal/Views/Login/SignIn.cshtml
+++ b/Traversal/Traversal/Views/Login/SignIn.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model TraversalCoreProje.Models.UserSignInViewModel
+
 @{
     Layout = null;
 }
@@ -35,13 +36,14 @@
 					<img src="~/Login/images/img-01.png" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="post">
 					<span class="login100-form-title">
 						Kullanıcı Girişi
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
+						<input class="input100" type="text" asp-for="Username" placeholder="Kullanıcı Adı">
+						<span asp-validation-for="Username"></span>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -49,7 +51,8 @@
 					</div>
 
 					<div class="wrap-input100 validate-input" data-validate="Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Şifre">
+						<input class="input100" type="password" asp-for="Password" placeholder="Şifre">
+						<span asp-validation-for="Password"></span>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
