Member Reservation other operations have been completed. Member layout has been updated.

--- a/Traversal/Traversal/Areas/Member/Views/Destination/Index.cshtml
+++ b/Traversal/Traversal/Areas/Member/Views/Destination/Index.cshtml
@@ -23,7 +23,7 @@
             </div>
             <div class="card-content collapse show">
                 <div class="card-body">
-                    <p class="card-text">Alanında uzman rehberlerimiz eşliğinde Balkanlardan Orta Asya'ya, Doğu Avrupa'dan Anadolu'nun dört bir yanına en uygun fiyatlarla sunduğumuz tur listemize ve tur detaylarına aşağıdaki tablodan ulaşabilirsiniz.</p>
+                    <p class="card-text">En uygun fiyatlarla sunduğumuz tur listemize ve tur detaylarına aşağıdaki tablodan ulaşabilirsiniz.</p>
                     <div class="table-responsive">
                         <table class="table">
                             <thead>
