--- a/Traversal/Traversal/Areas/Member/Views/Profile/Index.cshtml
+++ b/Traversal/Traversal/Areas/Member/Views/Profile/Index.cshtml
@@ -22,7 +22,7 @@
             </div>
             <div class="card-content collapse show">
                 <div class="card-body">
-                    <p class="card-text">Profil ile ilgili bilgilerinizi bu sayfadan güncelleyebilirsiniz</p>
+                    <p class="card-text">Profil ile ilgili bilgilerinizi bu sayfadan güncelleyebilirsiniz!</p>
                     <form method="post" enctype="multipart/form-data">
                         @Html.Label("Adınız")
                         <input type="text" asp-for="Name" class="form-control" />
@@ -44,7 +44,7 @@
                         <br />
                         <div class="form-group">
                             <label>Resim Seçin</label>
-                            <input type="file" asp-for="Image" />
+                            <input type="file" asp-for="Image"/>
                         </div>
                         <br />
                         <button class="btn btn-primary">Güncelle</button>
