--- a/Traversal/Traversal/Views/MemberPartials/FooterPartial.cshtml
+++ b/Traversal/Traversal/Views/MemberPartials/FooterPartial.cshtml
@@ -6,24 +6,21 @@
                     © <script>
                           document.write(new Date().getFullYear())
                     </script>,
-                    made with <i class="fa fa-heart"></i> by
-                    <a href="https://www.creative-tim.com" class="font-weight-bold" target="_blank">Creative Tim</a>
-                    for a better web.
+                    Designed <i class="fa fa-heart"></i> by
+                    <a href="https://www.linkedin.com/in/yasinramazangok/" class="font-weight-bold" target="_blank">Yasin Ramazan GÖK.</a>
+                    Tüm hakları saklıdır.
                 </div>
             </div>
             <div class="col-lg-6">
-                <ul class="nav nav-footer justify-content-center justify-content-lg-end">
+                <ul class="nav nav-footer justify-content-center justify-content-lg-end">                 
                     <li class="nav-item">
-                        <a href="https://www.creative-tim.com" class="nav-link text-muted" target="_blank">Creative Tim</a>
+                        <a href="https://www.linkedin.com/in/yasinramazangok/" class="nav-link pe-0 text-muted" target="_blank">LinkedIn</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://www.creative-tim.com/presentation" class="nav-link text-muted" target="_blank">About Us</a>
+                        <a href="https://github.com/yasinramazangok" class="nav-link pe-0 text-muted" target="_blank">GitHub</a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://creative-tim.com/blog" class="nav-link text-muted" target="_blank">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="https://www.creative-tim.com/license" class="nav-link pe-0 text-muted" target="_blank">License</a>
+                        <a href="mailto:yasinrmzngok@gmail.com" class="nav-link pe-0 text-muted" target="_blank">Email</a>
                     </li>
                 </ul>
             </div>
