--- a/Traversal/Traversal/Views/MemberPartials/HeaderPartial.cshtml
+++ b/Traversal/Traversal/Views/MemberPartials/HeaderPartial.cshtml
@@ -4,7 +4,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="~/MemberPanel/assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="~/MemberPanel/assets/img/favicon.png">
     <title>
-        Soft UI Dashboard by Creative Tim
+        Traversal
     </title>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
