Guide validator and PDF report controller have been added.

--- a/Traversal/Traversal/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Traversal/Traversal/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Traversal
 @using Traversal.Areas.Admin.Controllers
+@using Traversal.Areas.Member.Models
 @using EntityLayer.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
