--- a/Traversal/Traversal/Areas/Admin/Views/Announcement/Index.cshtml
+++ b/Traversal/Traversal/Areas/Admin/Views/Announcement/Index.cshtml
@@ -22,8 +22,8 @@
             <td>@item.AnnouncementId</td>
             <td>@item.Title</td>
             <td>@item.Content</td>
-            <td><a href="/Admin/Announcement/DeleteAnnouncement/@item.AnnouncementId" class="btn btn-outline-danger">Sil</a></td>
-            <td><a href="/Admin/Announcement/UpdateAnnouncement/@item.AnnouncementId" class="btn btn-outline-success">Güncelle</a></td>
+            <td><a href="@Url.Action("DeleteAnnouncement", "Announcement", new { area = "Admin", id = item.AnnouncementId })" class="btn btn-outline-danger">Sil</a></td>
+            <td><a href="@Url.Action("UpdateAnnouncement", "Announcement", new { area = "Admin", id = item.AnnouncementId })" class="btn btn-outline-success">Güncelle</a></td>
             <td><a href="#" class="btn btn-outline-dark">Detaylar</a></td>
         </tr>
     }
