--- a/Traversal/Traversal/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Traversal/Traversal/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Traversal
+@using DTOLayer.DTO.AnnouncementDto
 @using Traversal.Areas.Admin.Controllers
 @using Traversal.Areas.Member.Models
 @using EntityLayer.Concrete
