Visitor operations have been added.

--- a/Traversal/Traversal/Areas/Admin/Views/_ViewImports.cshtml
+++ b/Traversal/Traversal/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Traversal
 @using DTOLayer.DTO.AnnouncementDto
 @using Traversal.Areas.Admin.Controllers
+@using Traversal.Areas.Admin.Models
 @using Traversal.Areas.Member.Models
 @using EntityLayer.Concrete
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
