--- a/Traversal/Traversal/Views/Comment/AddComment.cshtml
+++ b/Traversal/Traversal/Views/Comment/AddComment.cshtml
@@ -1,9 +1,14 @@
-﻿<div class="leave-comment-form mt-5" id="reply">
-    <h4 class="side-title mb-2">Leave a Reply</h4>
+﻿@if (User.Identity.IsAuthenticated)
+{
+    <div class="leave-comment-form mt-5" id="reply">
+    <h4 class="side-title mb-2">Yorum Yap</h4>
     <p class="mb-4">
         Your email address will not be published. Required fields are marked *
     </p>
     <form method="post" asp-action="AddComment" asp-controller="Comment">
+        <input type="hidden" name="DestinationId" value="@ViewBag.destinationId" />
+        <input type="hidden" name="TraversalUserId" value="@ViewBag.userId" />
+
         <div class="form-group">
             <textarea name="Content" class="form-control" placeholder="Yorumunuzu yazabilirsiniz" required="" spellcheck="false"></textarea>
         </div>
@@ -21,3 +26,8 @@
     </form>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.min.js" type="text/javascript"></script>
+}
+else
+{
+    <h2>Yorum yapabilmek için üye olmanız gereklidir!</h2>
+}
