--- a/Traversal/Traversal/Views/Shared/Components/UIDefaultFeaturedPartial/Default.cshtml
+++ b/Traversal/Traversal/Views/Shared/Components/UIDefaultFeaturedPartial/Default.cshtml
@@ -1,15 +1,14 @@
-﻿<!--/-->
-<div class="best-rooms py-5">
+﻿<div class="best-rooms py-5">
     <div class="container py-md-5">
         <div class="ban-content-inf row">
             <div class="maghny-gd-1 col-lg-6">
                 <div class="maghny-grid">
                     <figure class="effect-lily border-radius  m-0">
-                        <img class="img-fluid" src="~/TraversalStarter/assets/images/g10.jpg" alt="" />
+                        <img class="img-fluid" src="~/TraversalLiberty/assets/images/g10.jpg" alt="" />
                         <figcaption>
                             <div>
-                                <h4>3Days, 4 Nights</h4>
-                                <p>From 1720$ </p>
+                                <h4>3 Gece, 4 Gün</h4>
+                                <p> 1720₺'den başlayan fiyatlar </p>
                             </div>
 
                         </figcaption>
@@ -21,11 +20,11 @@
                     <div class="maghny-gd-1 col-6">
                         <div class="maghny-grid">
                             <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/TraversalStarter/assets/images/g9.jpg" alt="" />
+                                <img class="img-fluid" src="~/TraversalLiberty/assets/images/g9.jpg" alt="" />
                                 <figcaption>
                                     <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1220$ </p>
+                                        <h4>3 Gece, 3 Gün</h4>
+                                        <p> 1220₺'den başlayan fiyatlar </p>
                                     </div>
 
                                 </figcaption>
@@ -35,11 +34,11 @@
                     <div class="maghny-gd-1 col-6">
                         <div class="maghny-grid">
                             <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/TraversalStarter/assets/images/g8.jpg" alt="" />
+                                <img class="img-fluid" src="~/TraversalLiberty/assets/images/g8.jpg" alt="" />
                                 <figcaption>
                                     <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1620$ </p>
+                                        <h4>4 Gece, 5 Gün</h4>
+                                        <p> 1620₺'den başlayan fiyatlar </p>
                                     </div>
 
                                 </figcaption>
@@ -49,11 +48,11 @@
                     <div class="maghny-gd-1 col-6 mt-4">
                         <div class="maghny-grid">
                             <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/TraversalStarter/assets/images/g7.jpg" alt="" />
+                                <img class="img-fluid" src="~/TraversalLiberty/assets/images/g7.jpg" alt="" />
                                 <figcaption>
                                     <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1820$ </p>
+                                        <h4>6 Gece, 6 Gün</h4>
+                                        <p> 1820₺'den başlayan fiyatlar </p>
                                     </div>
 
                                 </figcaption>
@@ -63,11 +62,11 @@
                     <div class="maghny-gd-1 col-6 mt-4">
                         <div class="maghny-grid">
                             <figure class="effect-lily border-radius">
-                                <img class="img-fluid" src="~/TraversalStarter/assets/images/g6.jpg" alt="" />
+                                <img class="img-fluid" src="~/TraversalLiberty/assets/images/g6.jpg" alt="" />
                                 <figcaption>
                                     <div>
-                                        <h4>3Days, 4 Nights</h4>
-                                        <p>From 1520$ </p>
+                                        <h4>2 Gece, 3 Gün</h4>
+                                        <p> 1520₺'den başlayan fiyatlar </p>
                                     </div>
 
                                 </figcaption>
@@ -79,4 +78,3 @@
         </div>
     </div>
 </div>
-<!-- //stats -->
