--- a/Traversal/Traversal/Views/UIPartials/NavbarPartial.cshtml
+++ b/Traversal/Traversal/Views/UIPartials/NavbarPartial.cshtml
@@ -2,7 +2,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg stroke">
             <h1>
-                <a class="navbar-brand mr-lg-5" href="index.html">
+                <a class="navbar-brand mr-lg-5" href="/Default/Home/">
                     Traversal
                 </a>
             </h1>
@@ -40,10 +40,10 @@
                         </div>
                     </li>
                     <li class="nav-item @(ViewContext.RouteData.Values["controller"].ToString() == "About" ? "active" : "")">
-                        <a class="nav-link" href="services.html">Hakkımızda</a>
+                        <a class="nav-link" href="/About/Home/">Hakkımızda</a>
                     </li>
                     <li class="nav-item @(ViewContext.RouteData.Values["controller"].ToString() == "Contact" ? "active" : "")">
-                        <a class="nav-link" href="contact.html">İletişim</a>
+                        <a class="nav-link" href="/Contact/Home/">İletişim</a>
                     </li>
                 </ul>
             </div>
